@startuml Diagramme des classes entités

class Utilisateur {
  +id : int
  +email : varchar(180)
  +roles : json
  +password : varchar(255)
  +nom : varchar(80)
  +prenom : varchar(80)
  +telephone : varchar(30)
  +coefficient : decimal(5,2)
  +adresse_livraison : varchar(255)
  +adresse_facturation : varchar(255)
  +commercial_id : int
  +is_verified : boolean
}

class ResetPasswordRequest {
  +id : int
  +user_id : int
  +selector : varchar(20)
  +hashed_token : varchar(100)
  +requested_at : datetime
  +expires_at : datetime
}

class Fournisseur {
  +id : int
  +commercial_id : int
  +nom : varchar(80)
  +email : varchar(320)
  +telephone : varchar(30)
  +adresse : varchar(255)
}

class Produit {
  +id : int
  +sous_categorie_id : int
  +stock : int
  +active : boolean
  +libelle_court : varchar(80)
  +libelle_long : longtext
  +image : varchar(255)
  +prix_ht : decimal(15,2)
  +prix_fournisseur : decimal(15,2)
  +fournisseur_id : int
  +promotion : decimal(10,5)
}

class Categorie {
  +id : int
  +active : boolean
  +nom : varchar(80)
  +image : varchar(255)
}

class SousCategorie {
  +id : int
  +categorie_id : int
  +active : boolean
  +nom : varchar(80)
  +image : varchar(255)
}

class Commande {
  +id : int
  +client_id : int
  +commercial_id : int
  +date_commande : datetime
  +mode_paiement : varchar(50)
  +statu : varchar(50)
  +tva : decimal(5,2)
  +reduction : decimal(5,2)
  +total : decimal(15,2)
  +total_ht : decimal(15,2)
  +adresse_livraison : varchar(255)
  +adresse_facturation : varchar(255)
}

class DetailCommande {
  +id : int
  +produit_id : int
  +commande_id : int
  +quantite : int
  +prix : decimal(15,2)
}

class Livraison {
  +id : int
  +commande_id : int
  +date : datetime
  +etat : varchar(50)
}

Utilisateur "1" --> "0..*" ResetPasswordRequest : fait
Utilisateur "1" --> "0..*" Fournisseur : gère
Utilisateur "1" --> "0..*" Commande : passe
Utilisateur "1" --> "0..*" Utilisateur : supervise (commercial_id)
Commande "1" --> "0..*" DetailCommande : contient
Commande "1" --> "0..*" Livraison : est_livrée
DetailCommande "1" --> "1" Produit : concerne
Produit "1" --> "0..*" Fournisseur : fourni par
Produit "1" --> "1" SousCategorie : classé_dans
SousCategorie "1" --> "0..*" Produit
Categorie "1" --> "0..*" SousCategorie : possède

@enduml